--- a/README
+++ b/README
@@ -1,11 +1,7 @@
-This is a simple web viewer for GPS tracks uploaded with mobile client.
-It is designed to work with Android version of great app TrackMe (http://www.luisespinosa.com/trackme_eng.html), 
-but it should be easy to adjust it for other clients (other database tables).
-Interface "look and feel" is based on TrackMe Display (http://forum.xda-developers.com/showthread.php?t=477394).
-It is possible to switch between Google Maps API and OpenLayers API with OpenStreetMap (any other compatible base layer).
+This is a simple web viewer to work with the excellent open-source fitness app RunnerUp 
+(https://github.com/jonasoreland/runnerup or https://play.google.com/store/apps/details?id=org.runnerup)
 
-Live demo:
-- http://flaa.fabiszewski.net/phptrackme/
+This is heavily based on the phpTrackMe (https://github.com/bfabiszewski/phpTrackme)
 
 Requirements:
 - PHP 5.1.2
@@ -14,21 +10,18 @@ Requirements:
 
 Features:
 - simple
-- allows live tracking
+- live tracking
 - track statistics
-- altitudes graph
+- altitudes graph (to be implemented in RunnerUp android app)
 - multiple users
 - user authentication
 - Google Maps API v3
-- OpenLayers v2
 - ajax 
 - server based configuration
 - user preferences stored in cookies
 
-Todo
-- install script
-- custom icons
-- write opensource client?
-
 License
 - GPL
+
+The server address in the Android app should be set to http://<server address>/requests.php
+
